<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choose_level_background"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_level_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_level_test"
        style="@style/StyleChooseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_level_easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_level_easy"
        style="@style/StyleChooseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_easy"
        android:textColor="@color/color_level_easy"
        app:layout_constraintBottom_toTopOf="@+id/tv_level_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_level_test"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_level_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_level_normal"
        android:text="@string/text_normal"
        style="@style/StyleChooseLevel"
        app:layout_constraintBottom_toTopOf="@+id/tv_level_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_level_easy" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_level_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_level_hard"
        android:text="@string/text_hard"
        style="@style/StyleChooseLevel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_level_normal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>