<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choose_type_background"
    tools:context=".presentation.ChooseTypeFragment">

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_type_text"
        android:textColor="@color/color_level_hard"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_type_plus"
        style="@style/StyleChooseType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_level_test"
        android:text="@string/type_plus"
        app:layout_constraintBottom_toTopOf="@+id/btn_type_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_type_minus"
        style="@style/StyleChooseType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_level_easy"
        android:text="@string/type_minus"
        app:layout_constraintBottom_toTopOf="@+id/btn_type_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_type_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_type_multiplication"
        style="@style/StyleChooseType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_level_normal"
        android:text="@string/type_multiplication"
        app:layout_constraintBottom_toTopOf="@+id/btn_type_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_type_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_type_division"
        style="@style/StyleChooseType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_level_hard"
        android:text="@string/type_division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_type_multiplication" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>