<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_finish_background"
    tools:context=".presentation.GameFinishFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/smiling"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_required_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/StyleFinisFragment"
        android:text="@string/text_present_required_answer"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji_result"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score_answer"
        style="@style/StyleFinisFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_score_answer"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answer" />

    <TextView
        android:id="@+id/tv_required_percentage"
        style="@style/StyleFinisFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_required_percentage"
        app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_answer" />

    <TextView
        android:id="@+id/tv_score_percentage"
        style="@style/StyleFinisFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_score_percentage"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        android:text="@string/text_retry_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>