<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_fragment_background"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_time"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyleBackQuestion"
        app:layout_constraintBottom_toTopOf="@+id/cv_left_number"
        app:layout_constraintEnd_toEndOf="@+id/tv_timer"
        app:layout_constraintStart_toStartOf="@+id/tv_timer"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <TextView
            android:id="@+id/tv_sum"
            android:text="@string/_1"
            style="@style/StyleTextQuestion" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_left_number"
        style="@style/StyleBackQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/cv_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_sum">

        <TextView
            android:id="@+id/tv_left_number"
            style="@style/StyleTextQuestion"
            android:text="@string/_1" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyleBackQuestion"
        app:layout_constraintBottom_toBottomOf="@+id/cv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_left_number"
        app:layout_constraintTop_toTopOf="@+id/cv_left_number">

        <TextView
            android:id="@+id/tv_question"
            android:text="@string/question_text"
            style="@style/StyleTextQuestion" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_1"
                style="@style/OptionCVStyle"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tv_option_1"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_2"
                style="@style/OptionCVStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_option_2"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_3"
                style="@style/OptionCVStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_option_3"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_4"
                style="@style/OptionCVStyle"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tv_option_4"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_5"
                style="@style/OptionCVStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_option_5"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_option_6"
                style="@style/OptionCVStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_option_6"
                    style="@style/OptionTVStyle" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9">

        <TextView
            android:id="@+id/tvAnswersProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/text_explanation_of_what_percentage_of_correct_answers"
            android:textColor="@color/color_level_hard"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>